modifique los 3 archivos para testear

--- a/css/style.css
+++ b/css/style.css
@@ -261,8 +261,8 @@ textarea{
 }
 .fotojazrecibida {
   width: 100%;
-  max-width: 300px;
-  border-radius: 12px;
+  max-width: 310px;
+  border-radius: 13x;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 .cajainputs {
